# HelloJudge3-API-Server

./: .gitignore  Cargo.toml  README.md  test.rs
src/: main.rs  test.rs
src/cli/: cmd_init.rs  cmd_reset.rs  config.rs  init_handle.rs  mod.rs  model.rs
src/cli/cmd_import/: challenge.rs  contest.rs  discussion.rs  file.rs  mod.rs  other.rs  permission_pack.rs  preliminary.rs  problem.rs  problemset.rs  submission.rs  tag.rs  team.rs  user.rs  wiki.rs
src/config/: auth.rs  common.rs  display.rs  judge.rs  judge_status.rs  mod.rs  phoneauth.rs  redis.rs
src/core/: mod.rs  result.rs  session.rs  state.rs
src/core/file/: file_system.rs  mod.rs
src/core/model/: discussion_path.rs  mod.rs
src/core/permission/: mod.rs  operator.rs  provider.rs  tests.rs
src/core/sql_func/: mod.rs
src/core/user/: mod.rs  user_problem_cache.rs
src/entity/: cached_accepted_problem.rs  challenge.rs  challenge_problemset.rs  challenge_record.rs  contest.rs  contest_clarification.rs  contest_problem.rs  discussion.rs  discussion_comment.rs  feed.rs  file_storage.rs  follower.rs  homepage_swiper.rs  image_store.rs  mail.rs  mod.rs  permission_group.rs  permission_pack.rs  permission_pack_user.rs  preliminary_contest.rs  preliminary_problem.rs  problem.rs  problem_file.rs  problem_solution.rs  problem_tag.rs  problemset.rs  problemset_problem.rs  problemtodo.rs  submission.rs  tag.rs  team.rs  team_contest.rs  team_file.rs  team_member.rs  team_problem.rs  team_problemset.rs  user.rs  user_rating_history.rs  virtual_contest.rs  wiki_config.rs  (+3 more)
src/entity/model/: discussion_path.rs  mod.rs  preliminary_subquestion.rs  problem_example.rs  problem_extra_parameter.rs  problem_file.rs  problem_subtask.rs  problemset_foreign_problem.rs  submission_result.rs  wiki_navigation_menu.rs
src/route/: mod.rs
src/route/user/: admin_mode.rs  auth_email.rs  change_email.rs  follow.rs  login.rs  logout.rs  mod.rs  model.rs  profile.rs  query_login_state.rs  register.rs  require_reset_password.rs  reset_password.rs
src/util/: mod.rs
